Correction of content misalignment in sidebar

--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -45,6 +45,10 @@
 		display: none;
 	}
 
+	@media (max-width: $screen-xs) {
+		padding-left: 4px;
+		}
+
 	.navbar-brand {
 		color: $text-color;
 	}
