--- a/src/styles/_sidebar.scss
+++ b/src/styles/_sidebar.scss
@@ -10,15 +10,15 @@
 	.lexicon-site-container {
 		flex: 1;
 		max-width: $content-max-width;
-		
-		@media (min-width: $screen-xs) {
+
+        @media (min-width: $screen-xs) {
 			padding-left: $base-size;
 			padding-right: $base-size * 2;
 		}
 
 		@media (min-width: $screen-md) {
 			padding-left: $base-size * 2;
-			padding-right: $base-size * 4;
+			padding-right: $base-size * 2;
 		}
 	}
 }
