--- a/src/styles/lexicon-site/_content-lexicon-site.scss
+++ b/src/styles/lexicon-site/_content-lexicon-site.scss
@@ -1,6 +1,6 @@
 .content .sidebar-offset {
 	p {
-		line-height: $base-size * 1;
+		line-height: 1.5;
 		margin-bottom: 20px;
 
 		a {
