--- a/src/styles/lexicon-site/_sidebar-lexicon-site.scss
+++ b/src/styles/lexicon-site/_sidebar-lexicon-site.scss
@@ -56,6 +56,11 @@
 		overflow: visible;
 		padding-bottom: $base-size * 2;
 		padding-top: $base-size;
+
+		@media (max-width: $screen-xs) {
+			padding-left: 12px;
+			padding-right: 12px;
+		}
 	}
 
 	.nav-icons {
@@ -91,6 +96,7 @@
 			color: $text-color;
 			padding-left: 0.875rem;
 			padding-right: $base-size * 1.5;
+			font-size: 1rem;
 
 			&::-moz-placeholder {
 				color: $brand-light-secondary-text;
